# realtor-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: d19e7f5abb9c_initial_migration.py
app/: __main__.py  config.py
app/db/: session.py
app/db/cruds/: __init__.py  filter_crud.py  notification_crud.py  offer_crud.py  user_crud.py
app/db/enums/: __init__.py  realty_type.py  renovation.py
app/db/models/: __init__.py  notification.py  offer.py  realty_filter.py  user.py
app/di/: container.py
app/di/providers/: __init__.py  database_provider.py
app/forms/: realty_filter_form.py
app/handlers/: __init__.py  admin.py  user_filters.py
app/keyboards/: filter_keyboards.py
app/modules/realtor/: __init__.py
app/modules/realtor/cian/: __init__.py  client.py  constants.py
app/modules/realtor/common/: __init__.py  address.py
app/modules/realtor/utils/: __init__.py  search_address.py
app/services/: __init__.py  monitoring_service.py  notification_service.py
app/states/: filter_states.py
